# usageview

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
redesignv2/: app.js  index.html  styles.css
src/: glass-effect.css  glass-theme.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/sensors/: uvsensord.cs
src-tauri/src/: asus_acpi.rs  gpu_perf.rs  lib.rs  main.rs
