[package]
name = "usageview"
version = "0.1.0"
description = "Floating desktop usage widget for Claude and Codex"
authors = ["UsageView"]
edition = "2021"

[lib]
name = "usageview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
