[package]
name = "usageview"
version = "0.1.0"
description = "Floating desktop usage widget for Claude and Codex"
authors = ["UsageView"]
edition = "2021"

[lib]
name = "usageview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
sysinfo = "0.33"
nvml-wrapper = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Performance",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
] }
